# kaggle_learn_python

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: booleans.ipynb  booleans_exercise.ipynb  exercise_1.ipynb  functions.ipynb  functions_exercise.ipynb  hello_python.ipynb  lists_and_loops.ipynb  lists_and_loops_exercise.ipynb  lists_exercise.ipynb  lists_kaggle.ipynb  sample.ipynb
src/quant_template/: example.py
